# claude-vc

./: .copier-answers.yml  .gitignore  .npmignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  package.json  pyproject.toml  uninstall.sh  update.sh
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
commands/: captable.md  compare.md  diligence.md  kpi.md  memo.md  model.md  portfolio.md  returns.md  screen.md  terms.md
docs/: frontier.md  roadmap.md  user-guide.md
docs/decisions/: 001-skill-architecture.md  002-data-sources.md  003-regulatory-disclaimers.md  004-scope-boundaries.md  005-slash-command-consolidation.md
docs/plans/: 2026-04-14-consolidate-slash-commands.md
docs/specs/: skill-system.md
extensions/octagon/: README.md
extensions/sec-edgar/: README.md
scripts/: captable.py  financial_model.py  memo_to_docx.py
skills/vc-captable/: SKILL.md
skills/vc-compare/: SKILL.md
skills/vc-competitive/: SKILL.md
skills/vc-diligence/: SKILL.md
skills/vc-financial/: SKILL.md
skills/vc-help/: SKILL.md
skills/vc-kpi/: SKILL.md
skills/vc-legal/: SKILL.md
skills/vc-market/: SKILL.md
skills/vc-memo/: SKILL.md
skills/vc-model/: SKILL.md
skills/vc-portfolio/: SKILL.md
skills/vc-returns/: SKILL.md
skills/vc-screen/: SKILL.md
skills/vc-team/: SKILL.md
skills/vc-technical/: SKILL.md
tests/: REAL_DATA_TEST_SUMMARY.md  TESTING.md  conftest.py  helpers.py
vc/: SKILL.md
(+158 files in other folders)
